--- a/e.html
+++ b/e.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
 <link rel="stylesheet" href="https://1211e1211.github.io/Website/e.css">
-</head
+</head>
 <body>
 <h1>blue</h1>
 <p>green</p>
